# adventure-party

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
bins/game_server/: Cargo.toml
crates/adventure_party_naia_world/: Cargo.toml
crates/adventure_party_naia_world/src/: entity.rs  world.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  tracing.rs
crates/common/tests/: test_macros_tests.rs
crates/components/: Cargo.toml
crates/components/src/: game.rs  lib.rs
crates/game_client/: Cargo.toml  README.md
crates/game_client/src/: app.rs  components.rs  lib.rs  main.rs  resources.rs
crates/game_client/src/components/: interp.rs
crates/game_client/src/systems/: events.rs  init.rs  input.rs  sync.rs
crates/game_server/: Cargo.toml
crates/game_server/src/: app.rs  main.rs  resources.rs  systems.rs
crates/game_server/src/systems/: events.rs  init.rs
crates/game_shared/: Cargo.toml
crates/game_shared/src/: channels.rs  components.rs  lib.rs  messages.rs  protocol.rs
crates/game_shared/src/behavior/: process_command.rs
crates/game_shared/src/components/: color.rs
crates/game_shared/src/messages/: auth.rs
crates/naia_macroquad_shared/: Cargo.toml
crates/naia_macroquad_shared/src/: channels.rs  lib.rs  messages.rs  protocol.rs
crates/naia_macroquad_shared/src/messages/: auth.rs
crates/pages/: Cargo.toml
crates/pages/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: channels.rs  messages.rs  protocol.rs
crates/protocol/src/messages/: auth.rs
crates/site/: Cargo.toml
crates/site/src/: app.rs  axum_yew_compat.rs  components.rs  main.rs  web.rs
crates/site/src/web/: index.rs
crates/site/templates/: index.html
crates/site/templates/components/: game_port.html
crates/ssr_hydrate/: Cargo.toml
crates/ssr_hydrate/src/: lib.rs
crates/test_log_macros/: Cargo.toml
crates/test_log_macros/src/: lib.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs  tracing.rs
libs/common/src/tracing/: helpers.rs
libs/common/tests/: test_macros_tests.rs
proc_macros/test_log_macros/: Cargo.toml
proc_macros/test_log_macros/src/: lib.rs
static/: index.css
