[workspace]
members = [
  "libs/*",
  "bins/*"
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Joshua Radin <joshradin@github.com>"]
description = "adventure party!!"
repository = "https://github.com/joshradin/adventure-party"
publish = false
rust-version = "1.81.0"
license-file = "LICENSE"

