[workspace]
members = [
  "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Joshua Radin <joshradin@github.com>"]
description = "adventure party!!"
repository = "https://github.com/joshradin/adventure-party"
publish = false
rust-version = "1.81.0"
license-file = "LICENSE"

[workspace.dependencies]
derive_more = "1.0.0"
log = "0.4.22"
macroquad = "0.4"
naia-client = "0.22"
naia-server = "0.22"
naia-shared = "0.22"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.79"
thiserror = "1.0.64"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

