[workspace]
members = [
  "crates/*"
]
default-members = ["crates/site"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Joshua Radin <joshradin@github.com>"]
description = "adventure party!!"
repository = "https://github.com/joshradin/adventure-party"
publish = false
rust-version = "1.81.0"
license-file = "LICENSE"

[workspace.dependencies]
derive_more = "1.0.0"
log = "0.4.22"
macroquad = "0.4"
naia-client = "0.22"
naia-server = "0.22"
naia-shared = "0.22"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.79"
thiserror = "1.0.64"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.7"
axum-extra = "0.9.4"
bevy = { version = "0.14", default-features = false }
bevy_app = { version = "0.14", default-features = false }
bevy_core = { version = "0.14", default-features = false }
bevy_log = { version = "0.14", default-features = false }
cfg-if = "1.0.0"
clap = "4.5.18"
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.30"
http-body = "1.0.1"
mime = "0.3.17"
moka = "0.12.8"
naia-bevy-client = "0.23.0"
naia-bevy-server = "0.23.0"
naia-bevy-shared = "0.23.0"
pin-project = "1.1.5"
relative-path = "1.9.3"
tracing-error = "0.2.0"
yew = "0.21.0"
bevy_ecs = { version = "0.14.2", default-features = false }
wasm-bindgen = "0.2.93"

