[package]
name = "common"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[features]
default = []
full = [
    "tracing",
    "test-macros"
]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "test_log_macros?/tracing"
]
test-macros = [
    "dep:test_log_macros",
]

[dependencies]
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["from"] }

# `tracing` dependecies
tracing = { workspace = true, optional = true }
# `tracing-subscriber` dependecies
tracing-subscriber = { workspace = true, optional = true }

# `test-macros` depdenencies
test_log_macros = { version = "0.0.0", path = "../test_log_macros", optional = true }
