[package]
name = "game_client"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
adventure_party_naia_world = { version = "0.0.0", path = "../adventure_party_naia_world" }
macroquad = { workspace = true, features = ["log"] }
naia-client = { workspace = true, features = ["mquad", "transport_webrtc"] }
log = { workspace = true, features = []}
naia_macroquad_shared = { version = "0.0.0", path = "../naia_macroquad_shared" }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.93"
console_log = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"