[package]
name = "game_client"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[[bin]]
name = "game_client"
path = "src/main.rs"

[lib]
name = "game_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
naia-bevy-client = { workspace = true, features = ["transport_webrtc"] }
bevy = { workspace = true, features = ["bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "x11", "webgl2"] }
cfg-if = { workspace = true }
log = { workspace = true }
game_shared = { path= "../game_shared", version="0.0.0"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
