[package]
name = "naia_macroquad_shared"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
naia-shared = { workspace = true, features = ["mquad"] }
