[package]
name = "pages"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
yew.workspace = true
wasm-bindgen = { workspace = true }
components = { version = "0.0.0", path = "../components" }
