[package]
name = "protocol"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
naia-bevy-shared = { workspace = true }
log = { workspace = true }
cfg-if = { workspace = true }
bevy_ecs = { workspace = true }
