[package]
name = "test_log_macros"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[features]
tracing = []

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }
quote = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
