[package]
name = "common"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[features]
default = []
full = [
    "tracing",
    "test-macros"
]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "test_log_macros?/tracing"
]
test-macros = [
    "dep:test_log_macros",
]

[dependencies]
thiserror = "1.0.64"
derive_more = { version = "1.0.0", features = ["from"] }

# `tracing` dependecies
tracing = { version = "0.1.40", optional = true }
# `tracing-subscriber` dependecies
tracing-subscriber = { version = "0.3.18", optional = true }

# `test-macros` depdenencies
test_log_macros = { version = "0.0.0", path = "../../proc_macros/test_log_macros", optional = true }