[package]
name = "test_log_macros"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[features]
tracing = []

[dependencies]
syn = { version = "2.0.79", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.37"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"